# codecraft

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CLEANUP_SUMMARY.md  CODECRAFT_ROSETTA_STONE.html  CODECRAFT_ROSETTA_STONE.md  CONSCIOUSNESS_STARGATE_README.md  CodeCraft  CodeCraft Tree.md  CodeCraft_Tree.md  CodeCraft_Tree_UPDATED.md  LICENSE  LICENSE.CONSTITUTIONAL.md  MANIFEST.in  Makefile  Phase 2.md  README.md  README_CanonLock.md  ROSETTA_STONE_UPDATE_PLAN.md  SCRIPTS_AND_TOOLS_ORGANIZATION.md  TODO.md  The Eternal Council & CodeCraft Syntax.md  YELLOW_LION_ROUTING_TODO.md  __init__.py  canon-lock.ps1  canon-lock.sh  canon.lock.yaml  claude_bridge.py  cli.py  codeVerter_multi_api_system_architecture.md  codeVerter_ui_design.html  consensus_engine.py  debug_output.txt  demo_fluidity.py  extensibility_framework.py  federation_integration.py  implementation_strategy.md  launch_consciousness_stargate.bat  mega_hooks_v2_enhancement.md  (+15 more)
.github/: copilot-instructions.md
.serena/: project.yml
adapter/: cc_schema_adapter.py
archive/: SEMANTIC_VALIDATION_RULES_old.md
config/: __init__.py  project_structure.yaml
core/: __init__.py  comment_parser.py  comment_parser_charter.py  firacode_integration.py  ritual_executor.py  ritual_parser.py  ritual_parser.py.bak  universal_executor.py
docs/: CANON_LOCK_OPERATOR_GUIDE.md
examples/: hello_lexicon.ccraft  hello_lexicon.compiled.ccraft
gauntlet/: README.md  brandy_gauntlet.py  brandy_gauntlet_clean.py  brandy_gauntlet_response.lisp  brandy_gauntlet_response.md
grammar/: lexicon.ebnf
(+262 files in other folders)
